<resources>
    <string name="app_name">v2care</string>

    <string name="pref_name">My pref</string>

    <string name="something_went_wrong">Something went wrong. Please contact the administrator</string>
    <string name="server_busy">Server is busy. Please try again later</string>
    <string name="check_connection">Please check your connection and try again.</string>
    <string name="field_cannot_empty">Field cannot empty.</string>
    <string name="invalid_email_format">Invalid Email Format</string>

    <string name="term_conditions">Term And Conditions</string>
    <string name="term_conditions_title">By continuing, you are indicating that you have read the that you have read the</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading</string>
    <string name="logout_warning">Are you sure want to logout?</string>

    <string name="fb_login_fail">Login failed, please try again later.</string>

    <!--<string name="facebook_app_id">888678837928814</string>-->
    <string name="google_key">AIzaSyAx5nKYxOa2ducZ7jLhuBjZxmQ4MyN9MXY</string>

    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>


    <string name="com_lamudi_phonefield_edittext">phone_edit_text</string>
    <string name="com_lamudi_phonefield_flag_spinner">flag_spinner</string>
    <string name="com_lamudi_phonefield_til_phone">til_phone</string>

    <string name="running">Route in process…</string>
    <string name="notification">Max Speed : %1$s, Distance : %2$s.</string>

    <string name="verification">Verification</string>
    <string name="noti_id" translatable="false">Speedmeterisanid</string>
    <string name="otp_message">OTP code is valid for 3 minutes only</string>
    <string name="groupText">Please take photo or upload image for your group before entering group name and click on Next button</string>
    <string name="share_contant"><![CDATA[I would like to invite you to download this v2care Apps, a traceability system and risk management for your love one. It also provides a closer communication link among your friends, family in the case of emergency. Download : http://go4drupal.com/gps_tracker/v2care.apk]]></string>
    <string name="emergency_number">Emergency Contact Number</string>
    <string name="emergency_person">Emergency Contact Person Name</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_banner_desc1"><![CDATA[v2care is providing a traceability system and risk management for your love one.  It also provides a closer communication link among your friends, family in the case of emergency.]]></string>
    <string name="welcome_banner_desc2">Managing your risk with small investment in v2care, you life would be more meaningful and happy when you are on travel</string>
    <string name="welcome_banner_desc3">You love your kid, and you wanted to protect them wherever their go, v2care assist you to manage your expectation and bring awareness of your kids location.</string>
    <string name="welcome_banner_desc4">Accident do happen in this world, v2care could assist you in the case of emergency and when you needed help from your love one.</string>
    <string name="welcome_banner_desc5"><![CDATA[Aging population and ageing parent is your main concern.  Your aged parent with v2care product, you would be less worry if the lost their way.]]></string>

    <string name="back_again_to_exit">Click Back again to exit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="confirm_password_is_not_same_as_password">Confirm password is not same as password</string>
    <string name="information">Information</string>
    <string name="sign_up_successful">Signed Up Successful</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="dashboard">Dashboard</string>
    <string name="app_version_s">App Version: %s</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="my_profile">My Profile</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="track_member_device">Track Member Device</string>
    <string name="sos">SOS</string>
    <string name="route_history">Route History</string>
    <string name="member_group">Member Group</string>
    <string name="faq">Faq</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Log Out</string>
    <string name="gallery">Gallery</string>
    <string name="tap_to_select">Tap To Select</string>
    <string name="resend">Resend</string>
    <string name="one_time_password">One Time Password</string>
    <string name="one_time_password_has_send_to_s">One Time Password has sent to\n%s</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password_does_not_match">Confirm password does not match with new password</string>
    <string name="no_data_found">No Data</string>
    <string name="error">Error</string>
    <string name="at_least_one_emergency_contact">At least one emergency contact is required.</string>
    <string name="add_new_group">Add New Group</string>
    <string name="you_have_not_added_any_group">You have not added any group/</string>
    <string name="add_now">Add Now</string>
    <string name="upgrade_plan">Upgrade Plan</string>
    <string name="current_plan">Current Plan:</string>
    <string name="price">Price:</string>
    <string name="total_device">Total Device</string>
    <string name="track_device_request_tnc"><![CDATA[You accepted the term & condition and agreed to be tracked location for your safety and risk management purpose by your member]]></string>
    <string name="view_all">View All</string>
    <string name="recent_track_device_request">Recent Track Device Request</string>
    <string name="recent_group_request">Recent Group Request</string>
    <string name="expire_on_s">Expire on %s</string>
    <string name="total_groups">Total Groups</string>
</resources>
