<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/add_group_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_have_not_added_any_group"
                    android:textColor="@color/white_new"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_now"
                    android:textColor="@color/green_new"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.example.android.vcare.widget.EndlessListView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/add_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_blue_round"
                android:text="@string/add_new_group"
                android:textAllCaps="true"
                android:textColor="@color/white_new"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>

